# npuzzle

./: .gitignore  CMakeLists.txt  Generator.cpp  Generator.hpp  GridPoint.cpp  GridPoint.h  Heuristics.cpp  Heuristics.h  Heuristics.hpp  Makefile  Parser.cpp  Parser.hpp  Readme.md  S-10-4000.txt  Solver.cpp  Solver.hpp  State.cpp  State.hpp  TODO.txt  auteur  main.cpp  profiler.txt  tools.cpp  tools.h  toto.cpp
puzzle/: 4-S-60.tt  s-puzzle-20  u-puzzle-20
test/: 2-U-0.txt  4-S-BadChar.txt  4-S-BadLine.txt  4-S-BadSigne.txt  5-S-BadSize.txt  S-4-400-T1.txt  S-4-400-T2.txt  S-5-2000-T6.txt  S-5-400-T3.txt  S-5-400-T4.txt  S-5-400-T5.txt  S-6-2000-T6.txt  S-7-2000-T7.txt  test.sh  test2.sh
